...
        child: Column(
          children: [
            Column(
              crossAxisAlignment: CrossAxisAlignment.end,
              children: [
                const CustomTextFormFieldLogin(
                  key: ValueKey('email_id'),
                  icon: Icons.email,
                  hintext: 'Email',
                  keyboardType: TextInputType.emailAddress,
                  textInputAction: TextInputAction.next,
                  validator: Validator.validatorEmail,
                ),
                const CustomTextFormFieldLogin(
                  key: ValueKey('password_id'),
                  icon: Icons.lock_outline,
                  hintext: 'Password',
                  obscureText: true,
                  textInputAction: TextInputAction.done,
                  validator: Validator.validatorPassword,
                ),
...
